--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://lodash.com/custom-builds",
   "license": "MIT",
   "main": "main.js",
+  "private": true,
   "keywords": "amd, modules, stdlib, util",
   "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
   "contributors": [
