--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "jsnext:main": "lodash.js",
   "main": "lodash.js",
+  "private": true,
   "keywords": "es6, modules, stdlib, util",
   "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
   "contributors": [
